@@ -69,7 +69,7 @@ public class AssertUniqueApprovalInCurricularCourseContexts extends CurricularRu
 
     @Override
     public ExecutionInterval getBegin() {
-        return ExecutionInterval.findFirstCurrentChild(toApply.getDegree().getCalendar());
+        return ExecutionInterval.findFirstCurrentChild(toApply.getDegree().getCalendar()).getExecutionYear();
     }
 
     @Override
