@@ -1,3 +1,5 @@
+- Refactor: Prepare code to allow mixing of different academic period types on same degree curricular plan (contexts and curricular rules validity are now always evaluated for execution year)
+
 28.7.0 (19-03-2020)
 - Refactor: PrecedentDegreeInformation split into 'completed' and 'previous'  
 - Fix: Deletion of AcademicCalendarEntries connected to ExecutionIntervals
